📝 fix titles and headers

--- a/index_1.0.0.1.html
+++ b/index_1.0.0.1.html
@@ -1,20 +1,20 @@
 <HTML>
-<HEAD><TITLE>Round-Trip and Packet Loss Stats</TITLE></HEAD>
+<HEAD><TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
-<H2>1.0.0.1 Ping</H3>
-<H3>Hourly Round-Trip & Packetloss Stats(5min average)</H3>
+<H2>1.0.0.1 DNS Ping</H3>
+<H3>Hourly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_1.0.0.1_hour.png><br>
 <br>
-<H3>Daily Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Daily Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_1.0.0.1_day.png><br>
 <br>
-<H3>Weekly Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Weekly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_1.0.0.1_week.png><br>
 <br>
-<H3>Monthly Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Monthly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_1.0.0.1_month.png><br>
 <br>
-<H3>Yearly Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Yearly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_1.0.0.1_year.png><br>
 <br>
 </BODY>
