--- a/index_84.200.70.40.html
+++ b/index_84.200.70.40.html
@@ -1,20 +1,20 @@
 <HTML>
-<HEAD><TITLE>Round-Trip and Packet Loss Stats</TITLE></HEAD>
+<HEAD><TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
-<H2>84.200.70.40 Ping</H3>
-<H3>Hourly Round-Trip & Packetloss Stats(5min average)</H3>
+<H2>84.200.70.40 DNS Ping</H3>
+<H3>Hourly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_84.200.70.40_hour.png><br>
 <br>
-<H3>Daily Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Daily Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_84.200.70.40_day.png><br>
 <br>
-<H3>Weekly Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Weekly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_84.200.70.40_week.png><br>
 <br>
-<H3>Monthly Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Monthly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_84.200.70.40_month.png><br>
 <br>
-<H3>Yearly Round-Trip & Packetloss Stats(5min average)</H3>
+<H3>Yearly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_84.200.70.40_year.png><br>
 <br>
 </BODY>
