--- a/index_192.168.0.13_pihole_wlan.html
+++ b/index_192.168.0.13_pihole_wlan.html
@@ -2,19 +2,19 @@
 <HEAD><TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
 <H2>192.168.0.13 DNS Ping</H3>
-<H3>Hourly Response Times & Loss Stats(5min average)</H3>
+<H3>192.168.0.13 Hourly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_192.168.0.13_hour.png><br>
 <br>
-<H3>Daily Response Times & Loss Stats(5min average)</H3>
+<H3>192.168.0.13 Daily Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_192.168.0.13_day.png><br>
 <br>
-<H3>Weekly Response Times & Loss Stats(5min average)</H3>
+<H3>192.168.0.13 Weekly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_192.168.0.13_week.png><br>
 <br>
-<H3>Monthly Response Times & Loss Stats(5min average)</H3>
+<H3>192.168.0.13 Monthly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_192.168.0.13_month.png><br>
 <br>
-<H3>Yearly Response Times & Loss Stats(5min average)</H3>
+<H3>192.168.0.13 Yearly Response Times & Loss Stats(5min average)</H3>
 <img src=dnsping_192.168.0.13_year.png><br>
 <br>
 </BODY>
