--- a/dashboard_day.html
+++ b/dashboard_day.html
@@ -17,19 +17,19 @@
 <H3>&#128010; 80.69.96.12 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_80.69.96.12_day.png><img src=dnsping_80.69.96.12_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 1.0.0.1 DNS Ping</H3>
+<H2>&#128010; 1.0.0.1 DNS Ping (Cloudflare)</H3>
 <H3>&#128010; 1.0.0.1 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_1.0.0.1_day.png><img src=dnsping_1.0.0.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 1.1.1.1 DNS Ping</H3>
+<H2>&#128010; 1.1.1.1 DNS Ping (Cloudflare)</H3>
 <H3>&#128010; 1.1.1.1 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_1.1.1.1_day.png><img src=dnsping_1.1.1.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 8.8.4.4 DNS Ping</H3>
+<H2>&#128010; 8.8.4.4 DNS Ping (Google)</H3>
 <H3>&#128010; 8.8.4.4 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_8.8.4.4_day.png><img src=dnsping_8.8.4.4_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 8.8.8.8 DNS Ping</H3>
+<H2>&#128010; 8.8.8.8 DNS Ping (Google)</H3>
 <H3>&#128010; 8.8.8.8 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_8.8.8.8_day.png><img src=dnsping_8.8.8.8_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
@@ -49,11 +49,11 @@
 <H3>&#128010; 84.200.70.40 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_84.200.70.40_day.png><img src=dnsping_84.200.70.40_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 9.9.9.11 DNS Ping</H3>
+<H2>&#128010; 9.9.9.11 DNS Ping (Quad9)</H3>
 <H3>&#128010; 9.9.9.11 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_9.9.9.11_day.png><img src=dnsping_9.9.9.11_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 149.112.112.11 DNS Ping</H3>
+<H2>&#128010; 149.112.112.11 DNS Ping (Quad9)</H3>
 <H3>&#128010; 149.112.112.11 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_149.112.112.11_day.png><img src=dnsping_149.112.112.11_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
