--- a/dashboard_year.html
+++ b/dashboard_year.html
@@ -17,19 +17,19 @@
 <H3>&#128010; 80.69.96.12 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_80.69.96.12_year.png><img src=dnsping_80.69.96.12_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 1.0.0.1 DNS Ping</H3>
+<H2>&#128010; 1.0.0.1 DNS Ping (Cloudflare)</H3>
 <H3>&#128010; 1.0.0.1 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_1.0.0.1_year.png><img src=dnsping_1.0.0.1_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 1.1.1.1 DNS Ping</H3>
+<H2>&#128010; 1.1.1.1 DNS Ping (Cloudflare)</H3>
 <H3>&#128010; 1.1.1.1 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_1.1.1.1_year.png><img src=dnsping_1.1.1.1_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 8.8.4.4 DNS Ping</H3>
+<H2>&#128010; 8.8.4.4 DNS Ping (Google)</H3>
 <H3>&#128010; 8.8.4.4 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_8.8.4.4_year.png><img src=dnsping_8.8.4.4_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 8.8.8.8 DNS Ping</H3>
+<H2>&#128010; 8.8.8.8 DNS Ping (Google)</H3>
 <H3>&#128010; 8.8.8.8 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_8.8.8.8_year.png><img src=dnsping_8.8.8.8_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
@@ -49,11 +49,11 @@
 <H3>&#128010; 84.200.70.40 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_84.200.70.40_year.png><img src=dnsping_84.200.70.40_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 9.9.9.11 DNS Ping</H3>
+<H2>&#128010; 9.9.9.11 DNS Ping (Quad9)</H3>
 <H3>&#128010; 9.9.9.11 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_9.9.9.11_year.png><img src=dnsping_9.9.9.11_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; 149.112.112.11 DNS Ping</H3>
+<H2>&#128010; 149.112.112.11 DNS Ping (Quad9)</H3>
 <H3>&#128010; 149.112.112.11 Yearly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_149.112.112.11_year.png><img src=dnsping_149.112.112.11_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
