--- a/dashboard_month.html
+++ b/dashboard_month.html
@@ -65,5 +65,17 @@
 <H3>&#128010; 208.67.222.222 Monthly Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_208.67.222.222_month.png><img src=dnsping_208.67.222.222_month.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
+<H2>&#128010; 213.73.91.35 DNS Ping (CCC)</H3>
+<H3>&#128010; 213.73.91.35 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_213.73.91.35_month.png><img src=dnsping_213.73.91.35_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 46.182.19.48 DNS Ping (Digitalcourage)</H3>
+<H3>&#128010; 46.182.19.48 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_46.182.19.48_month.png><img src=dnsping_46.182.19.48_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 194.150.168.168 DNS Ping (AS250.net)</H3>
+<H3>&#128010; 194.150.168.168 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_194.150.168.168_month.png><img src=dnsping_194.150.168.168_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
 </BODY>
 </HTML>
