--- a/dashboard_month.html
+++ b/dashboard_month.html
@@ -73,5 +73,49 @@
 <H3>&#128010; 194.150.168.168 Daily Response Times & Loss Stats(5min average)</H3>
 <a href=dnsping_194.150.168.168_month.png><img src=dnsping_194.150.168.168_month.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
+<H2>&#128010; 5.1.66.255 DNS Ping (Freifunk Muenchen)</H3>
+<H3>&#128010; 5.1.66.255  Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_5.1.66.255_month.png><img src=dnsping_5.1.66.255_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 185.150.99.255 DNS Ping (Freifunk Muenchen)</H3>
+<H3>&#128010; 185.150.99.255 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_185.150.99.255_month.png><img src=dnsping_185.150.99.255_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 80.241.218.68 DNS Ping (dismail.de)</H3>
+<H3>&#128010; 80.241.218.68 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_80.241.218.68_month.png><img src=dnsping_80.241.218.68_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 159.69.114.157 DNS Ping (dismail.de)</H3>
+<H3>&#128010; 159.69.114.157 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_159.69.114.157_month.png><img src=dnsping_159.69.114.157_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 176.9.93.198 DNS Ping (dnsforge.de)</H3>
+<H3>&#128010; 176.9.93.198 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_176.9.93.198_month.png><img src=dnsping_176.9.93.198_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 176.9.1.117 DNS Ping (dnsforge.de)</H3>
+<H3>&#128010; 176.9.1.117 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_176.9.1.117_month.png><img src=dnsping_176.9.1.117_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 94.140.14.14 DNS Ping (AdGuard MIT Werbe- und Trackingfilter)</H3>
+<H3>&#128010; 94.140.14.14 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_94.140.14.14_month.png><img src=dnsping_94.140.14.14_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 94.140.14.15 DNS Ping (AdGuard MIT Werbe- und Trackingfilter)</H3>
+<H3>&#128010; 94.140.14.15 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_94.140.14.15_month.png><img src=dnsping_94.140.14.15_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 94.140.14.150 DNS Ping (AdGuard OHNE Werbe- und Trackingfilter)</H3>
+<H3>&#128010; 94.140.14.140 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_94.140.14.140_month.png><img src=dnsping_94.140.14.140_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 94.140.14.141 DNS Ping (AdGuard OHNE Werbe- und Trackingfilter)</H3>
+<H3>&#128010; 94.140.14.141 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_94.140.14.141_month.png><img src=dnsping_94.140.14.141_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; 95.215.19.53 DNS Ping (Njalla &#x1F1F8;&#x1F1EA)
+<H3>&#128010; 95.215.19.53 Daily Response Times & Loss Stats(5min average)</H3>
+<a href=dnsping_95.215.19.53_month.png><img src=dnsping_95.215.19.53_month.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
 </BODY>
 </HTML>
