--- a/dashboard_hour.html
+++ b/dashboard_hour.html
@@ -3,119 +3,119 @@
 <BODY>
 <H2>&#128010; <a href=index_192.168.42.241_pihole_localhost.html>192.168.42.241</a> DNS Ping (Pi-hole)</H3>
 <H3>&#128010; <a href=index_192.168.42.241_pihole_localhost.html>192.168.42.241</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_192.168.42.241_hour.png><img src=images/dnsping_192.168.42.241_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_192.168.42.241_hour.png><img src=images/dnsping_192.168.42.241_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_192.168.0.13_pihole_wlan.html>192.168.0.13</a> DNS Ping (WLAN-Router / Fallback)</H3>
 <H3>&#128010; <a href=index_192.168.0.13_pihole_wlan.html>192.168.0.13</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_192.168.0.13_hour.png><img src=images/dnsping_192.168.0.13_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_192.168.0.13_hour.png><img src=images/dnsping_192.168.0.13_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_192.168.0.1_vodafone.html>192.168.0.1</a> DNS Ping (Vodafone-Station / DMZ)</H3>
 <H3>&#128010; <a href=index_192.168.0.1_vodafone.html>192.168.0.1</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_192.168.0.1_hour.png><img src=images/dnsping_192.168.0.1_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_192.168.0.1_hour.png><img src=images/dnsping_192.168.0.1_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_80.69.96.12_vodafone.html>80.69.96.12</a> DNS Ping (Vodafone-DNS-Resolver)</H3>
 <H3>&#128010; <a href=index_80.69.96.12_vodafone.html>80.69.96.12</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_80.69.96.12_hour.png><img src=images/dnsping_80.69.96.12_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_80.69.96.12_hour.png><img src=images/dnsping_80.69.96.12_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_1.0.0.1_dnssec.html>1.0.0.1</a> DNS Ping (Cloudflare)</H3>
 <H3>&#128010; <a href=index_1.0.0.1_dnssec.html>1.0.0.1</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_1.0.0.1_hour.png><img src=images/dnsping_1.0.0.1_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_1.0.0.1_hour.png><img src=images/dnsping_1.0.0.1_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_1.1.1.1_dnssec.html>1.1.1.1</a> DNS Ping (Cloudflare)</H3>
 <H3>&#128010; <a href=index_1.1.1.1_dnssec.html>1.1.1.1</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_1.1.1.1_hour.png><img src=images/dnsping_1.1.1.1_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_1.1.1.1_hour.png><img src=images/dnsping_1.1.1.1_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_8.8.4.4_ecs_dnssec.html>8.8.4.4</a> DNS Ping (Google)</H3>
 <H3>&#128010; <a href=index_8.8.4.4_ecs_dnssec.html>8.8.4.4</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_8.8.4.4_hour.png><img src=images/dnsping_8.8.4.4_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_8.8.4.4_hour.png><img src=images/dnsping_8.8.4.4_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_8.8.8.8_ecs_dnssec.html>8.8.8.8</a> DNS Ping (Google)</H3>
 <H3>&#128010; <a href=index_8.8.8.8_ecs_dnssec.html>8.8.8.8</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_8.8.8.8_hour.png><img src=images/dnsping_8.8.8.8_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_8.8.8.8_hour.png><img src=images/dnsping_8.8.8.8_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_45.90.28.39_filtered_ecs_dnssec.html>45.90.28.39</a> DNS Ping (NextDNS.io - in use by Pi-hole and WLAN-Router)</H3>
 <H3>&#128010; <a href=index_45.90.28.39_filtered_ecs_dnssec.html>45.90.28.39</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_45.90.28.39_hour.png><img src=images/dnsping_45.90.28.39_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_45.90.28.39_hour.png><img src=images/dnsping_45.90.28.39_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_45.90.30.39_filtered_ecs_dnssec.html>45.90.30.39</a> DNS Ping (NextDNS.io - in use by Pi-hole and WLAN-Router)</H3>
 <H3>&#128010; <a href=index_45.90.30.39_filtered_ecs_dnssec.html>45.90.30.39</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_45.90.30.39_hour.png><img src=images/dnsping_45.90.30.39_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_45.90.30.39_hour.png><img src=images/dnsping_45.90.30.39_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_84.200.69.80_dnssec.html>84.200.69.80</a> DNS Ping (DNS.Watch)</H3>
 <H3>&#128010; <a href=index_84.200.69.80_dnssec.html>84.200.69.80</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_84.200.69.80_hour.png><img src=images/dnsping_84.200.69.80_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_84.200.69.80_hour.png><img src=images/dnsping_84.200.69.80_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_84.200.70.40_dnssec.html>84.200.70.40</a> DNS Ping (DNS.Watch)</H3>
 <H3>&#128010; <a href=index_84.200.70.40_dnssec.html>84.200.70.40</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_84.200.70.40_hour.png><img src=images/dnsping_84.200.70.40_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_84.200.70.40_hour.png><img src=images/dnsping_84.200.70.40_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_9.9.9.11_filtered_ecs_dnssec.html>9.9.9.11</a> DNS Ping (Quad9)</H3>
 <H3>&#128010; <a href=index_9.9.9.11_filtered_ecs_dnssec.html>9.9.9.11</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_9.9.9.11_hour.png><img src=images/dnsping_9.9.9.11_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_9.9.9.11_hour.png><img src=images/dnsping_9.9.9.11_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_149.112.112.11_filtered_dnssec.html>149.112.112.11</a> DNS Ping (Quad9)</H3>
 <H3>&#128010; <a href=index_149.112.112.11_filtered_dnssec.html>149.112.112.11</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_149.112.112.11_hour.png><img src=images/dnsping_149.112.112.11_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_149.112.112.11_hour.png><img src=images/dnsping_149.112.112.11_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_208.67.220.220_ecs_dnssec.html>208.67.220.220</a> DNS Ping (OpenDNS)</H3>
 <H3>&#128010; <a href=index_208.67.220.220_ecs_dnssec.html>208.67.220.220</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_208.67.220.220_hour.png><img src=images/dnsping_208.67.220.220_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_208.67.220.220_hour.png><img src=images/dnsping_208.67.220.220_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_208.67.222.222_ecs_dnssec.html>208.67.222.222</a> DNS Ping (OpenDNS)</H3>
 <H3>&#128010; <a href=index_208.67.222.222_ecs_dnssec.html>208.67.222.222</a> Hourly Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_208.67.222.222_hour.png><img src=images/dnsping_208.67.222.222_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_208.67.222.222_hour.png><img src=images/dnsping_208.67.222.222_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_46.182.19.48_digitalcourage.html>46.182.19.48</a> DNS Ping (Digitalcourage)</H3>
 <H3>&#128010; <a href=index_46.182.19.48_digitalcourage.html>46.182.19.48</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_46.182.19.48_hour.png><img src=images/dnsping_46.182.19.48_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_46.182.19.48_hour.png><img src=images/dnsping_46.182.19.48_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_194.150.168.168_as250_net.html>194.150.168.168</a> DNS Ping (AS250.net)</H3>
 <H3>&#128010; <a href=index_194.150.168.168_as250_net.html>194.150.168.168</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_194.150.168.168_hour.png><img src=images/dnsping_194.150.168.168_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_194.150.168.168_hour.png><img src=images/dnsping_194.150.168.168_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_5.1.66.255_freifunk_mue_zensurfrei_dnssec.html>5.1.66.255</a> DNS Ping (Freifunk Muenchen)</H3>
 <H3>&#128010; <a href=index_5.1.66.255_freifunk_mue_zensurfrei_dnssec.html>5.1.66.255</a>  Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_5.1.66.255_hour.png><img src=images/dnsping_5.1.66.255_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_5.1.66.255_hour.png><img src=images/dnsping_5.1.66.255_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_185.150.99.255_freifunk_mue_zensurfrei_dnssec.html>185.150.99.255</a> DNS Ping (Freifunk Muenchen)</H3>
 <H3>&#128010; <a href=index_185.150.99.255_freifunk_mue_zensurfrei_dnssec.html>185.150.99.255</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_185.150.99.255_hour.png><img src=images/dnsping_185.150.99.255_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_185.150.99.255_hour.png><img src=images/dnsping_185.150.99.255_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_80.241.218.68_dismail.de.html>80.241.218.68</a> DNS Ping (dismail.de)</H3>
 <H3>&#128010; <a href=index_80.241.218.68_dismail.de.html>80.241.218.68</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_80.241.218.68_hour.png><img src=images/dnsping_80.241.218.68_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_80.241.218.68_hour.png><img src=images/dnsping_80.241.218.68_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_159.69.114.157_dismail.de.html>159.69.114.157</a> DNS Ping (dismail.de)</H3>
 <H3>&#128010; <a href=index_159.69.114.157_dismail.de.html>159.69.114.157</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_159.69.114.157_hour.png><img src=images/dnsping_159.69.114.157_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_159.69.114.157_hour.png><img src=images/dnsping_159.69.114.157_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_176.9.93.198_dnsforge.de.html>176.9.93.198</a> DNS Ping (dnsforge.de)</H3>
 <H3>&#128010; <a href=index_176.9.93.198_dnsforge.de.html>176.9.93.198</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_176.9.93.198_hour.png><img src=images/dnsping_176.9.93.198_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_176.9.93.198_hour.png><img src=images/dnsping_176.9.93.198_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_176.9.1.117_dnsforge.de.html>176.9.1.117</a> DNS Ping (dnsforge.de)</H3>
 <H3>&#128010; <a href=index_176.9.1.117_dnsforge.de.html>176.9.1.117</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_176.9.1.117_hour.png><img src=images/dnsping_176.9.1.117_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_176.9.1.117_hour.png><img src=images/dnsping_176.9.1.117_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_94.140.14.14_adguard_mit_werbe_und_trackingfilter.html>94.140.14.14</a> DNS Ping (AdGuard MIT Werbe- und Trackingfilter)</H3>
 <H3>&#128010; <a href=index_94.140.14.14_adguard_mit_werbe_und_trackingfilter.html>94.140.14.14</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.14.14_hour.png><img src=images/dnsping_94.140.14.14_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_94.140.14.14_hour.png><img src=images/dnsping_94.140.14.14_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_94.140.15.15_adguard_mit_werbe_und_trackingfilter.html>94.140.15.15</a> DNS Ping (AdGuard MIT Werbe- und Trackingfilter)</H3>
 <H3>&#128010; <a href=index_94.140.15.15_adguard_mit_werbe_und_trackingfilter.html>94.140.15.15</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.15.15_hour.png><img src=images/dnsping_94.140.15.15_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_94.140.15.15_hour.png><img src=images/dnsping_94.140.15.15_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_94.140.14.140_adguard_mit_werbe_und_trackingfilter.html>94.140.14.140</a> DNS Ping (AdGuard OHNE Werbe- und Trackingfilter)</H3>
 <H3>&#128010; <a href=index_94.140.14.140_adguard_ohne_werbe_und_trackingfilter.html>94.140.14.140</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.14.140_hour.png><img src=images/dnsping_94.140.14.140_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_94.140.14.140_hour.png><img src=images/dnsping_94.140.14.140_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_94.140.14.141_adguard_ohne_werbe_und_trackingfilter.html>94.140.14.141</a> DNS Ping (AdGuard OHNE Werbe- und Trackingfilter)</H3>
 <H3>&#128010; <a href=index_94.140.14.141_adguard_ohne_werbe_und_trackingfilter.html>94.140.14.141</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_94.140.14.141_hour.png><img src=images/dnsping_94.140.14.141_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_94.140.14.141_hour.png><img src=images/dnsping_94.140.14.141_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 <H2>&#128010; <a href=index_95.215.19.53_njalla_schweden_zensurfrei_privacy_fokusiert.html>95.215.19.53</a> DNS Ping (Njalla &#x1F1F8;&#x1F1EA)
 <H3>&#128010; <a href=index_95.215.19.53_njalla_schweden_zensurfrei_privacy_fokusiert.html>95.215.19.53</a> Daily Response Times & Loss Stats(5min average)</H3>
-<a href=dnsping_95.215.19.53_hour.png><img src=images/dnsping_95.215.19.53_hour.png style="max-height: 90%; max-width: 90%"></a><br>
+<a href=images/dnsping_95.215.19.53_hour.png><img src=images/dnsping_95.215.19.53_hour.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
 </BODY>
 </HTML>
