🐛 fix title of dashboard for year 🚸 add direct links to my dashboards

--- a/dashboard_year.html
+++ b/dashboard_year.html
@@ -1,5 +1,5 @@
 <HTML>
-<HEAD><TITLE>MONTH - Response Times and Packet Loss Stats</TITLE></HEAD>
+<HEAD><TITLE>YEAR - Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
 <H2>&#128010; <a href=index_192.168.42.241_pihole_localhost.html>192.168.42.241</a> DNS Ping (Pi-hole)</H3>
 <H3>&#128010; <a href=index_192.168.42.241_pihole_localhost.html>192.168.42.241</a> Yearly Response Times & Loss Stats(5min average)</H3>
