--- a/dashboard_year.html
+++ b/dashboard_year.html
@@ -133,5 +133,13 @@
 <H3>&#128010; <a href=index_193.110.81.9.html>193.110.81.9</a> Last year's Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_193.110.81.9_year.png><img src=images/dnsping_193.110.81.9_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
+<H2>&#128010; <a href=index_76.76.2.38_1hosts.html>76.76.2.38</a> DNS Ping (1Hosts)</H2>
+<H3>&#128010; <a href=index_76.76.2.38_1hosts.html>76.76.2.38</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_76.76.2.38_day.png><img src=images/dnsping_76.76.2.38_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; <a href=index_76.76.2.39_1hosts.html>76.76.2.39</a> DNS Ping (1Hosts)</H2>
+<H3>&#128010; <a href=index_76.76.2.39_1hosts.html>76.76.2.39</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_76.76.2.39_day.png><img src=images/dnsping_76.76.2.39_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
 </BODY>
 </HTML>
