--- a/dashboard_year.html
+++ b/dashboard_year.html
@@ -49,6 +49,14 @@
 <H3>&#128010; <a href=index_45.90.30.241.html>45.90.30.241</a> Last year's Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_45.90.30.241_year.png><img src=images/dnsping_45.90.30.241_year.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
+<H2>&#128010; <a href=index_45.90.28.205.html>45.90.28.205</a> DNS Ping (NextDNS.io - in use by Pi-hole and WLAN-Router)</H2>
+<H3>&#128010; <a href=index_45.90.28.205.html>45.90.28.205</a> Last year's Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_45.90.28.205_year.png><img src=images/dnsping_45.90.28.205_year.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
+<H2>&#128010; <a href=index_45.90.30.205.html>45.90.30.205</a> DNS Ping (NextDNS.io - in use by Pi-hole and WLAN-Router)</H2>
+<H3>&#128010; <a href=index_45.90.30.205.html>45.90.30.205</a> Last year's Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_45.90.30.205_year.png><img src=images/dnsping_45.90.30.205_year.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
 <H2>&#128010; <a href=index_84.200.69.80_dnssec.html>84.200.69.80</a> DNS Ping (DNS.Watch)</H2>
 <H3>&#128010; <a href=index_84.200.69.80_dnssec.html>84.200.69.80</a> Last year's Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_84.200.69.80_year.png><img src=images/dnsping_84.200.69.80_year.png style="max-height: 90%; max-width: 90%"></a><br>
