--- a/dashboard_day.html
+++ b/dashboard_day.html
@@ -17,6 +17,10 @@
 <H3>&#128010; <a href=index_80.69.96.12_vodafone.html>80.69.96.12</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_80.69.96.12_day.png><img src=images/dnsping_80.69.96.12_day.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
+<H2>&#128010; <a href=index_81.210.129.4_vodafone.html>81.210.129.4</a> DNS Ping (Vodafone-DNS-Resolver)</H2>
+<H3>&#128010; <a href=index_81.210.129.4_vodafone.html>81.210.129.4</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_81.210.129.4_day.png><img src=images/dnsping_81.210.129.4_day.png style="max-height: 90%; max-width: 90%"></a><br>
+<br>
 <H2>&#128010; <a href=index_1.0.0.1_dnssec.html>1.0.0.1</a> DNS Ping (Cloudflare)</H2>
 <H3>&#128010; <a href=index_1.0.0.1_dnssec.html>1.0.0.1</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_1.0.0.1_day.png><img src=images/dnsping_1.0.0.1_day.png style="max-height: 90%; max-width: 90%"></a><br>
