--- a/dashboard_month.html
+++ b/dashboard_month.html
@@ -133,7 +133,7 @@
 <H3>&#128010; <a href=index_94.140.14.141_adguard_ohne_werbe_und_trackingfilter.html>94.140.14.141</a> Monthly Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_94.140.14.141_month.png><img src=images/dnsping_94.140.14.141_month.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
-<H2>&#128010; <a href=index_95.215.19.53_njalla_schweden_zensurfrei_privacy_fokusiert.html>95.215.19.53</a> DNS Ping (Njalla &#x1F1F8;&#x1F1EA)</H2>
+<H2>&#128010; <a href=index_95.215.19.53_njalla_schweden_zensurfrei_privacy_fokusiert.html>95.215.19.53</a> DNS Ping (Njalla &#x1F1F8;&#x1F1EA;)</H2>
 <H3>&#128010; <a href=index_95.215.19.53_njalla_schweden_zensurfrei_privacy_fokusiert.html>95.215.19.53</a> Monthly Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_95.215.19.53_month.png><img src=images/dnsping_95.215.19.53_month.png style="max-height: 90%; max-width: 90%"></a><br>
 <br>
