🚨 fix to valid html

--- a/xxx.html
+++ b/xxx.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <HTML lang="en">
 <HEAD>
 <meta charset="utf-8">
+
+<meta charset="utf-8">
+
 <TITLE>DAY - Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
 <H2>&#128010; <a href=index_192.168.42.241_pihole_localhost.html>192.168.42.241</a> DNS Ping (Pi-hole)</H2>
