--- a/xxx2.html
+++ b/xxx2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <HTML lang="en">
 <HEAD>
+<meta charset="utf-8">
+
 <meta charset="utf-8">
 <TITLE>DAY - Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
