--- a/index_185.253.5.0.html
+++ b/index_185.253.5.0.html
@@ -1,5 +1,8 @@
-<HTML>
-<HEAD><TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
+<!DOCTYPE html>
+<HTML lang="en">
+<HEAD>
+<meta charset="utf-8">
+<TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
 <H2>185.253.5.0 DNS Ping (DNS0EU)</H2>
 <H3>185.253.5.0 Hourly Response Times & Loss Stats(5min average)</H3>
