--- a/index_80.69.96.12_vodafone.html
+++ b/index_80.69.96.12_vodafone.html
@@ -1,5 +1,8 @@
-<HTML>
-<HEAD><TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
+<!DOCTYPE html>
+<HTML lang="en">
+<HEAD>
+<meta charset="utf-8">
+<TITLE>Response Times and Packet Loss Stats</TITLE></HEAD>
 <BODY>
 <H2>80.69.96.12 DNS Ping</H2>
 <H3>80.69.96.12 Hourly Response Times & Loss Stats(5min average)</H3>
