🚸 add some more DNS servers added recently: dns.sb, HaGeZi and DNSBunker

--- a/dashboard_week.html
+++ b/dashboard_week.html
@@ -176,5 +176,29 @@
 <H3>&#128010; <a href=index_138.199.237.109.html>138.199.237.109</a> Daily Response Times & Loss Stats(5min average)</H3>
 <a href=images/dnsping_138.199.237.109_week.png><img src=images/dnsping_138.199.237.109_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
 <br>
+<H2>&#128010; <a href=index_185.222.222.222.html>185.222.222.222</a> DNS Ping (https://dns.sb/)</H2>
+<H3>&#128010; <a href=index_185.222.222.222.html>185.222.222.222</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_185.222.222.222_week.png><img src=images/dnsping_185.222.222.222_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_45.11.45.11.html>45.11.45.11</a> DNS Ping (https://dns.sb/)</H2>
+<H3>&#128010; <a href=index_45.11.45.11.html>45.11.45.11</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_45.11.45.11_week.png><img src=images/dnsping_45.11.45.11_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_root.hagezi.org.html>root.hagezi.org</a> DNS Ping (https://root.hagezi.org in FSN - TLS!)</H2>
+<H3>&#128010; <a href=index_root.hagezi.org.html>root.hagezi.org</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_root.hagezi.org_week.png><img src=images/dnsping_root.hagezi.org_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_wurzn.hagezi.org.html>wurzn.hagezi.org</a> DNS Ping (https://wurzn.hagezi.org in NBG - TLS!)</H2>
+<H3>&#128010; <a href=index_wurzn.hagezi.org.html>wurzn.hagezi.org</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_wurzn.hagezi.org_week.png><img src=images/dnsping_wurzn.hagezi.org_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_juuri.hagezi.org.html>juuri.hagezi.org</a> DNS Ping (https://juuri.hagezi.org in HEL - TLS!)</H2>
+<H3>&#128010; <a href=index_juuri.hagezi.org.html>juuri.hagezi.org</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_juuri.hagezi.org_week.png><img src=images/dnsping_juuri.hagezi.org_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
+<H2>&#128010; <a href=index_dnsbunker.org.html>dnsbunker.org</a> DNS Ping (https://dnsbunker.org netcup/anexia - TLS!)</H2>
+<H3>&#128010; <a href=index_dnsbunker.org.html>dnsbunker.org</a> Daily Response Times & Loss Stats(5min average)</H3>
+<a href=images/dnsping_dnsbunker.org_week.png><img src=images/dnsping_dnsbunker.org_week.png style="max-height: 90%; max-width: 90%" alt="generated image from data"></a><br>
+<br>
 </BODY>
 </HTML>
